Kubernetes/deploy_back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ptin-back
spec:
  #replicas: 6
  selector:
    matchLabels:
      app: ptin-back-app
  template:
    metadata:
      labels:
        app: ptin-back-app
    spec:
      #imagePullSecrets:
      # - name: regcred
      containers:
      - name: ptin-back-app
        image: asierhr/catering-back:v2.1
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "600Mi"
            cpu: "400m"
          limits:
            memory: "1Gi"
            cpu: "700m"
