Kubernetes/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ptinbd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ptinbd
  template:
    metadata:
      labels:
        app: ptinbd
    spec:
      containers:
      - name: postgresql
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: datos-postgresql
            mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: datos-postgresql
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "local-path"
      resources:
        requests:
          storage: 5Gi
