Kubernetes/backService.yaml
apiVersion: v1
kind: Service
metadata:
  name: ptin-back
spec:
  type: ClusterIP
  selector: 
    app: ptin-back-app
  ports:
    - port: 8080
      targetPort: 8080
