Kubernetes/bdService.yaml
apiVersion: v1
kind: Service
metadata:
  name: ptinbd
spec:
  ports:
    - port: 5432
  clusterIP: None
  selector:
    app: ptinbd
