Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
 # ingressClassName: nginx
  rules:
  - host: ptincatering.me
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ptin-back
            port:
              number: 8080

      - path: /
        pathType: Prefix
        backend:
          service:
            name: ptin-front
            port:
              number: 80
